<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.unique.pak.viewmodel.SelectingGameViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundm">

    <TextView
        android:id="@+id/textView"
        style="@style/toolbar"
        android:text="@string/level_of_complexity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/image_easy"
        style="@style/selected_item_image"
        android:src="@drawable/plant"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/image_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <Button
        android:id="@+id/easy_text"
        style="@style/selected_item_text"
        android:text="@string/easy"
        app:layout_constraintTop_toTopOf="@id/image_easy"
        app:layout_constraintStart_toStartOf="@id/image_easy" />

    <ImageView
        android:id="@+id/image_medium"
        style="@style/selected_item_image"
        android:rotation="20"
        android:src="@drawable/in_yan"
        app:layout_constraintEnd_toStartOf="@id/image_hard"
        app:layout_constraintStart_toEndOf="@id/image_easy"
        app:layout_constraintTop_toTopOf="@+id/image_easy" />

    <Button
        android:id="@+id/medium_text"
        style="@style/selected_item_text"
        android:text="@string/medium"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/image_medium"
        app:layout_constraintStart_toStartOf="@id/image_medium" />

    <ImageView
        android:id="@+id/image_hard"
        style="@style/selected_item_image"
        android:src="@drawable/fire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_medium"
        app:layout_constraintTop_toTopOf="@+id/image_medium" />

    <Button
        android:id="@+id/hard_text"
        style="@style/selected_item_text"
        android:text="@string/hard"
        app:layout_constraintTop_toTopOf="@id/image_hard"
        app:layout_constraintStart_toStartOf="@id/image_hard" />


    <ImageView
        android:id="@+id/image_time_third"
        style="@style/selected_item_image"
        android:src="@drawable/clock_30"
        android:layout_marginTop="30dp"
        android:rotation="185"
        app:layout_constraintEnd_toStartOf="@id/image_time_sixty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_text" />

    <Button
        android:id="@+id/time_third_text"
        style="@style/selected_item_text"
        android:text="@string/_30_sec"
        app:layout_constraintTop_toTopOf="@id/image_time_third"
        app:layout_constraintStart_toStartOf="@id/image_time_third" />

    <ImageView
        android:id="@+id/image_time_sixty"
        style="@style/selected_item_image"
        android:src="@drawable/clock_60"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_time_third"
        app:layout_constraintStart_toEndOf="@id/image_time_third"
        app:layout_constraintTop_toBottomOf="@+id/easy_text" />

    <Button
        android:id="@+id/time_sixty_text"
        style="@style/selected_item_text"
        android:text="@string/_60_sec"
        app:layout_constraintTop_toTopOf="@id/image_time_sixty"
        app:layout_constraintStart_toStartOf="@id/image_time_sixty" />

    <Button
        android:id="@+id/start"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/item_menu"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/time_third_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>